--- a/style.css
+++ b/style.css
@@ -8,19 +8,29 @@ header h1 {
 }
 
 .towers {
-  margin-top: 0.5rem;
+  margin: 0.5rem 0 2rem;
 }
 
 .tower {
   height: 15rem;
-  width: 10rem;
+  width: 12.5rem;
   background: red;
   margin: 0 auto;
   display: flex;
   flex-direction: column-reverse;
   align-items: center;
+  cursor: pointer;
+}
+
+.tower:hover {
+  box-shadow: 0 0 5px 5px #ccc;
 }
 
 .tower + .tower {
   margin-top: 0.5rem;
+}
+
+.disc {
+  height: 1.5rem;
+  background: blue;
 }
