--- a/style.css
+++ b/style.css
@@ -85,3 +85,34 @@ header h1 {
   border-radius: 0.3rem;
   border: 1px solid #000;
 }
+
+@media only screen and (min-width: 768px) {
+  html {
+    font-size: 112.5%;
+  }
+
+  .towers {
+    display: flex;
+  }
+
+  .tower {
+    margin-top: 0;
+  }
+}
+
+@media only screen and (min-width: 1024px) {
+  html {
+    font-size: 125%;
+  }
+}
+
+@media only screen and (min-width: 1440px) {
+  .tower {
+    height: 24rem;
+    width: 20rem;
+  }
+
+  .disc {
+    height: 2.4rem;
+  }
+}
